old/src/tui/widgets/snapshots/patui__tui__widgets__table__tests__scroll_with_selection_table-2.snap
---
source: src/tui/widgets/table.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 24 },
    content: [
        "Name                              Description                       Creation Date        Last Used            Times Used",
        "                                                                                                                        ",
        "test11                            test description 11               2024-08-31 11:00:00                                0",
        "test12                            test description 12               2024-08-31 11:00:00                                0",
        "test13                            test description 13               2024-08-31 11:00:00                                0",
        "test14                            test description 14               2024-08-31 11:00:00                                0",
        "test15                            test description 15               2024-08-31 11:00:00                                0",
        "test16                            test description 16               2024-08-31 11:00:00                                0",
        "test17                            test description 17               2024-08-31 11:00:00                                0",
        "test18                            test description 18               2024-08-31 11:00:00                                0",
        "test19                            test description 19               2024-08-31 11:00:00                                0",
        "test20                            test description 20               2024-08-31 11:00:00                                0",
        "test21                            test description 21               2024-08-31 11:00:00                                0",
        "test22                            test description 22               2024-08-31 11:00:00                                0",
        "test23                            test description 23               2024-08-31 11:00:00                                0",
        "test24                            test description 24               2024-08-31 11:00:00                                0",
        "test25                            test description 25               2024-08-31 11:00:00                                0",
        "test26                            test description 26               2024-08-31 11:00:00                                0",
        "test27                            test description 27               2024-08-31 11:00:00                                0",
        "test28                            test description 28               2024-08-31 11:00:00                                0",
        "test29                            test description 29               2024-08-31 11:00:00                                0",
        "test30                            test description 30               2024-08-31 11:00:00                                0",
        "test31                            test description 31               2024-08-31 11:00:00                                0",
        "test32                            test description 32               2024-08-31 11:00:00                                0",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 88, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 89, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 109, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 110, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 67, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 88, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 89, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 109, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 110, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
    ]
}
